Add minor changes